<resources>
    <string name="app_name">EMC</string>
    
    <string name="museum_title">EMC (Egyptian Museum In Cairo)</string>
    <string name="short_description">The Museum of Egyptian Antiquities, known commonly as the Egyptian Museum or Museum of Cairo, in Cairo, Egypt, is home to an extensive collection of ancient Egyptian antiquities. It has 120,000 items, with a representative amount on display, the remainder in storerooms.</string>
    <string name="establish_date">1825-1835</string>
    <string name="sohrt_location">Cairo, Egypt</string>
    <string name="long_location">The Egyptian Museum, Taken from the stairwell of the NIle Hilton Hotel opposite. Centrally located on the edge of Tahrir Square in Cairo.</string>
    <string name="history">The Egyptian Museum of Antiquities contains many important pieces of ancient Egyptian history. It houses the world\'s largest collection of Pharaonic antiquities. The Egyptian government established the museum built in 1835 near the Ezbekeyah Garden and later moved to the Cairo Citadel. In 1855, Archduke Maximilian of Austria was given all of the artifacts by the Egyptian government; these are now in the Kunsthistorisches Museum, Vienna.A new museum was established at Boulaq in 1858 in a former warehouse, following the foundation of the new Antiquities Department under the direction of Auguste Mariette. The building lay on the bank of the Nile River, and in 1878 it suffered significant damage in a flood of the Nile River. In 1891, the collections were moved to a former royal palace, in the Giza district of Cairo.[1] They remained there until 1902 when they were moved, for the last time, to the current museum in Tahrir Square.
    In 2004, the museum appointed Wafaa El Saddik as the first female director general. During the Egyptian Revolution of 2011, the museum was broken into, and two mummies were destroyed. Several artifacts were also shown to have been damaged. Around 50 objects were lost. Since then 25 objects have been found. Those that were restored were put on display in September 2013 in an exhibition entitled Damaged and Restored. Among the displayed artifacts are two statues of King Tutankhamun made of cedar wood and covered with gold, a statue of King Akhenaten, ushabti statues that belonged to the Nubian kings, a mummy of a child and a small polychrome glass vase</string>

</resources>
